# presentation_prj1

./: README.md
prj1/: .cproject  .project  build.bat  build.sh  conanfile.txt  config-Default.sh  config-release.bat  config-release.sh  config-vs.bat  configure.bat  configure.sh  global_setup.bat  global_setup.sh  meson.build  vs.bat
prj1/src/: main.cpp  meson.build
prj1/src/hash/: fipsmode.cpp  fipsmode.hpp  hash.cpp  hash.hpp  meson.build
prj1/src/test/: hash.cpp  meson.build  test.cpp
